include/mcp/c_api/mcp_c_filter_buffer.h

/* ============================================================================
 * Buffer Watermarks
 * ============================================================================
 */

/**
 * Set buffer watermarks for flow control
 * @param buffer Buffer handle
 * @param low_watermark Low watermark bytes
 * @param high_watermark High watermark bytes
 * @param overflow_watermark Overflow watermark bytes
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_buffer_set_watermarks(mcp_buffer_handle_t buffer,
                                               size_t low_watermark,
                                               size_t high_watermark,
                                               size_t overflow_watermark)
    MCP_NOEXCEPT;
/**
 * Check if buffer is above high watermark
 * @param buffer Buffer handle
 * @return MCP_TRUE if above high watermark
 */
MCP_API mcp_bool_t mcp_buffer_above_high_watermark(mcp_buffer_handle_t buffer)
    MCP_NOEXCEPT;
/**
 * Check if buffer is below low watermark
 * @param buffer Buffer handle
 * @return MCP_TRUE if below low watermark
 */
MCP_API mcp_bool_t mcp_buffer_below_low_watermark(mcp_buffer_handle_t buffer)
    MCP_NOEXCEPT;
/* ============================================================================
 * Advanced Buffer Pool
 * ============================================================================
 */

typedef struct mcp_buffer_pool_config {
  size_t buffer_size;           // Size of each buffer
  size_t max_buffers;           // Maximum buffers in pool
  size_t prealloc_count;        // Number to preallocate
  mcp_bool_t use_thread_local;  // Use thread-local caching
  mcp_bool_t zero_on_alloc;     // Zero memory on allocation
} mcp_buffer_pool_config_t;
/**
 * Create buffer pool with configuration
 * @param config Pool configuration
 * @return Buffer pool handle or NULL on error
 */
MCP_API mcp_buffer_pool_t
mcp_buffer_pool_create_ex(const mcp_buffer_pool_config_t* config) MCP_NOEXCEPT;
/**
 * Get pool statistics
 * @param pool Buffer pool
 * @param free_count Output: free buffers
 * @param used_count Output: used buffers
 * @param total_allocated Output: total bytes allocated
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_buffer_pool_get_stats(mcp_buffer_pool_t pool,
                                               size_t* free_count,
                                               size_t* used_count,
                                               size_t* total_allocated)
    MCP_NOEXCEPT;
/**
 * Trim pool to reduce memory usage
 * @param pool Buffer pool
 * @param target_free Target number of free buffers
 * @return MCP_OK on success
 */
MCP_API mcp_result_t mcp_buffer_pool_trim(mcp_buffer_pool_t pool,
                                          size_t target_free) MCP_NOEXCEPT;