sdk/java/gopher-mcp/src/main/java/com/gopher/mcp/jna/McpFilterBufferLibrary.java


  /**
   * Set buffer watermarks for flow control (line 431)
   *
   * @param buffer Buffer handle
   * @param low_watermark Low watermark bytes
   * @param high_watermark High watermark bytes
   * @param overflow_watermark Overflow watermark bytes
   * @return MCP_OK on success
   */
  int mcp_buffer_set_watermarks(
      long buffer,
      NativeLong low_watermark,
      NativeLong high_watermark,
      NativeLong overflow_watermark);

  /**
   * Check if buffer is above high watermark (line 442)
   *
   * @param buffer Buffer handle
   * @return MCP_TRUE if above high watermark
   */
  byte mcp_buffer_above_high_watermark(long buffer);

  /**
   * Check if buffer is below low watermark (line 450)
   *
   * @param buffer Buffer handle
   * @return MCP_TRUE if below low watermark
   */
  byte mcp_buffer_below_low_watermark(long buffer);

  /* ============================================================================
   * Advanced Buffer Pool (lines 457-496)
   * ============================================================================
   */

  /**
   * Create buffer pool with configuration (line 471)
   *
   * @param config Pool configuration
   * @return Buffer pool handle or NULL on error
   */
  Pointer mcp_buffer_pool_create_ex(McpBufferPoolConfig.ByReference config);

  /**
   * Get pool statistics (line 482)
   *
   * @param pool Buffer pool
   * @param free_count Output: free buffers
   * @param used_count Output: used buffers
   * @param total_allocated Output: total bytes allocated
   * @return MCP_OK on success
   */
  int mcp_buffer_pool_get_stats(
      Pointer pool,
      PointerByReference free_count,
      PointerByReference used_count,
      PointerByReference total_allocated);

  /**
   * Trim pool to reduce memory usage (line 494)
   *
   * @param pool Buffer pool
   * @param target_free Target number of free buffers
   * @return MCP_OK on success
   */
  int mcp_buffer_pool_trim(Pointer pool, NativeLong target_free);
}
